--- a/news.txt
+++ b/news.txt
@@ -78,3 +78,12 @@ DDoS атака
 <code>+</code> страницы ошибок
 <code>+</code> кнопка <i>на шикимори</i> возле названия
 <code>~</code> мелкие улучшения 
+==
+30.07.19
+Обновление 2.2.0
+<code>+</code> Material Design 2
+<code>+</code> очень много оптимизаций
+<code>+</code> очень много визуальных и багофиксов
+<code>+</code> календарь онгоингов
+<code>+</code> фильтры в поиске, сохранение пресетов поиска
+<code>+</code> парсеры
