--- a/news.txt
+++ b/news.txt
@@ -87,3 +87,4 @@ DDoS атака
 <code>+</code> календарь онгоингов
 <code>+</code> фильтры в поиске, сохранение пресетов поиска
 <code>+</code> парсеры
+<code>+</code> ручная смена режима отображения списков - постеры или список
