--- a/news.txt
+++ b/news.txt
@@ -88,3 +88,6 @@ DDoS атака
 <code>+</code> фильтры в поиске, сохранение пресетов поиска
 <code>+</code> парсеры
 <code>+</code> ручная смена режима отображения списков - постеры или список
+==
+Обновление 2.2.1
+<code>~</code> различные фиксы
