--- a/news.txt
+++ b/news.txt
@@ -92,3 +92,7 @@ DDoS атака
 30.07.19
 Обновление 2.2.1
 <code>~</code> различные фиксы
+==
+04.08.19
+Обновление 2.2.2
+<code>~</code> оптимизации и фиксы
