--- a/news.txt
+++ b/news.txt
@@ -96,3 +96,8 @@ DDoS атака
 04.08.19
 Обновление 2.2.2
 <code>~</code> оптимизации и фиксы
+==
+06.08.19
+Обновление 2.2.3
+<code>+</code> новые серии онгоингов в списках
+<code>~</code> улучшения
