--- a/news.txt
+++ b/news.txt
@@ -101,3 +101,7 @@ DDoS атака
 Обновление 2.2.3
 <code>+</code> новые серии онгоингов в списках
 <code>~</code> улучшения
+==
+14.08.19
+Обновление 2.2.4
+<code>~</code> улучшения PWA, просмотрщика, авторизации
