--- a/news.txt
+++ b/news.txt
@@ -105,3 +105,9 @@ DDoS атака
 14.08.19
 Обновление 2.2.4
 <code>~</code> улучшения PWA, просмотрщика, авторизации
+==
+28.08.193
+Обновление 2.3.0
+<code>+</code> видеоплеер
+<code>+</code> альтернативный плеер Anime365
+<code>~</code> разные улучшения
